# mbf_nested_intervals

./: .gitignore  .hgtags  Cargo.toml  flake.nix  pyproject.toml  setup.cfg  setup.py
.github/workflows/: release.yml
src/: lib.rs  numpy.rs
tests/: test_interval_set.py
