[package]
name = "mbf_nested_intervals"
version = "0.3.1"
authors = ["Florian Finkernagel <finkernagel@imt.uni-marburg.de>"]
edition = "2018"

[dependencies]
nested_intervals="0.5.1"
pyo3={ version = "0.20.*", features= ["extension-module"]}

[lib]
name = "mbf_nested_intervals"
crate-type = ["cdylib"]
